--- a/style.css
+++ b/style.css
@@ -31,3 +31,17 @@ nav{
     border-width: 1px;
     border-color: gray;
 }
+
+#buttons{
+    margin:2rem auto 0 auto;
+    display:flex;
+    width:17rem;
+    justify-content:space-around;
+}
+
+.button{
+    padding:.5rem;
+    border-width: 0px;
+    border-radius: 3px;;
+    color:rgb(26,26,26);
+}
